给迭代添加迭代器的一种好的实践

--- a/docs/第4章. 迭代和流程控制.md
+++ b/docs/第4章. 迭代和流程控制.md
@@ -765,7 +765,99 @@ const low = [...range(random, 0, 0.8)]
 
 除了创建迭代器对象技术的影响，我们现在讨论几个实际的例子对我们可以如何从迭代器中受益。
 
+> #### 识别无限序列
+> 迭代器不提供任何信息来说明它们生成的序列是不是无限的。这一点类似于著名的停顿问题（如图4-5），通过代码没办法获知序列是否是无限的。
+> ![Figure 4-5. The halting problem depicted in an XKCD comic](https://ponyfoo.com/books/practical-modern-javascript/img/pmjs_0405.png)
+> 不过一般说来你可以判断一个序列是不是无限序列。是否是无限序列取决于你是否给一个序列添加了退出条件。如果你添加了退出条件`for...of`就不会造成程序崩溃，否则当你对一个无限序列使用`Array.form`或拓展运算符时程序就马上崩溃了。
+> 
 
 
+#### 迭代对象映射图为键值对
+
+有非常多的实践方案受益于转换一个对象为可迭代对象。对象映射，伪数组都天生是可迭代的，上面的随机数字生成器为我们生成了一个无限序列，以及拥有特点属性的类或者纯对象通常都是可迭代，的，它们都可以从以下迭代协议中获益。
+
+一般说来，JS对象被用来表征字符串键值和任意值之间的映射。我们以下面的代码为例，`colors`对象拥有一系列颜色名及其对应的十六进制颜色之间形成映射。有些请求下，你会很喜欢这种毫不费力的迭代不同颜色名，十六进制颜色表征或键值对的能力。
+
+```js
+const colors = {
+  green: '#0e0',
+  orange: '#f50',
+  pink: '#e07'
+}
+```
+
+下述代码表征了一个迭代器用以生成包含`colors`对象中每一种颜色的`[key,value]`序列。考虑到拥有`Symbol.iterator`属性，我们可以非常容易的遍历整个列表。
+
+```js
+const colors = {
+  green: '#0e0',
+  orange: '#f50',
+  pink: '#e07',
+  [Symbol.iterator]() {
+    const keys = Object.keys(colors)
+    return {
+      next() {
+        const done = keys.length === 0
+        const key = keys.shift()
+        return {
+          done,
+          value: [key, colors[key]]
+        }
+      }
+    }
+  }
+}
+```
+
+现在我们只需要简单的使用拓展运算符`...`就可以提取出所有的键值对。
+
+```js
+console.log([...colors])
+// <- [['green', '#0e0'], ['orange', '#f50'], ['pink', '#e07']]
+```
+
+实际上我们使用一个大的迭代定义污染了之前的纯粹的`colors`对象可能表明了一个问题，由于迭代行为和储存颜色对没有太大的关系。一个更好的实践办法是提取迭代方法为一个可复用的函数。这样，我们就可以移动`keyValueIterable`到我们的代码中的其它地方在之后还可以在某种程度上复用它。
+
+```js
+function keyValueIterable(target) {
+  target[Symbol.iterator] = function () {
+    const keys = Object.keys(target)
+    return {
+      next() {
+        const done = keys.length === 0
+        const key = keys.shift()
+        return {
+          done,
+          value: [key, target[key]]
+        }
+      }
+    }
+  }
+  return target
+}
+```
+
+之后我们可以传入`colors`对象为`keyValueIterable`的参数，并把这个对象转换为可迭代对象。由于这个函数对所传入的参数没有特殊的要求，你甚至可以把`keyValueIterable`方法用于任何你想转换其为可迭代键值对的对象上。一旦我们给对象加上`Symbol.iterator`属性，这个对象就是可迭代的了。下面的代码中，我们迭代了键值对但是值打印出`color`：
+
+```js
+const colors = keyValueIterable({
+  green: '#0e0',
+  orange: '#f50',
+  pink: '#e07'
+})
+for (const [ , color] of colors) {
+  console.log(color)
+  // <- '#0e0'
+  // <- '#f50'
+  // <- '#e07'
+}
+```
+
+一个音乐播放器可被看做是另一个有意思的例子。
+
+
+### 构建多样性的可迭代播放列表
+
+假设，你开发了一个音乐播放器，这个播放器的播放列表可以复制一次然后停止。
 
 
