对函数参数默认值和函数参数解构添加额外的说明

--- a/docs/第2章. ES6 概要.md
+++ b/docs/第2章. ES6 概要.md
@@ -619,6 +619,31 @@ carFactory({ make: 2000 })
 
 函数参数解构就可以解决这个问题。
 
+> #### 对函数默认参数的补充
+> 我们定义以下三个函数，
+> 
+> ```js
+> // 函数1
+> function foo(a=1,b=2){}
+> function bar(a,b=1){} 
+> function baz(a,b){}
+> 
+> console.log(foo.length) // 0
+> console.log(bar.length) // 1
+> console.log(baz.length) // 2
+> ```
+> 
+实际上，我们也可以把具有默认值的函数参数不当做真实的参数，而当做每次函数执行会在函数最前面定义的变量，如下：
+> 
+> ```js
+> function foo() {
+  var a = arguments.length > 0 && arguments[0] !== undefined ? arguments[0] : 1;
+  var b = arguments.length > 1 && arguments[1] !== undefined ? arguments[1] : 2;
+}
+> ```
+> 
+> 理解清楚这一点 对接下来你理解函数参数的解构也会很有帮助。
+
 ### 函数参数解构
 
 通过函数参数解构，可以解决上面的问题，这里我们为每一个属性都提供了默认值，单独改变其中一个并不会影响其它的值：
@@ -632,6 +657,8 @@ carFactory({ make: 2000 })
 // <- 'Volkswagen'
 // <- 2000
 ```
+
+此处的函数参数解构其实可以看做`{{ brand = 'Volkswagen', make = 1999 } = {make:2000}}`。
 
 不过这种情况下，函数调用时，如果参数为空即`carFactory()`函数将抛出异常。这种问题可以通过下面的方法来修复，下述代码中我们添加了一个空对象作为`options`的默认值，这样当函数被调用时，如果参数为空，会自动以`{}`作为参数。
 
